# llm-moderation

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 001_create_moderations.sql
models/: Cargo.toml
models/src/: error.rs  lib.rs  request.rs  response.rs
src/: main.rs
src/application/: errors.rs  mod.rs  moderation_service.rs
src/domain/: entities.rs  mod.rs  ports.rs  value_objects.rs
src/infrastructure/: config.rs  mod.rs
src/infrastructure/postgres/: mod.rs  repository.rs
src/infrastructure/vllm/: client.rs  mod.rs  models.rs  prompts.rs
src/presentation/: mod.rs  openapi.rs  routes.rs  state.rs
src/presentation/handlers/: health.rs  mod.rs  moderation.rs  reason.rs
src/presentation/middleware/: api_key.rs  mod.rs
