[package]
name = "llm_moderation"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["models"]

[workspace.dependencies]
# Web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI
utoipa = { version = "5.4", features = ["axum_extras", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

# Utils
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
models = { path = "models" }

axum.workspace = true
tower.workspace = true
tower-http.workspace = true

sqlx.workspace = true

serde.workspace = true
serde_json.workspace = true

utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true

tokio.workspace = true
reqwest.workspace = true
async-trait.workspace = true

thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
validator.workspace = true
dotenvy = "0.15"
